--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div class="reveal">
-      <div class="slides">
-        <section>Horizontal Slide</section>
-        <section>
-          <section>Vertical Slide 1</section>
-          <section>Vertical Slide 2</section>
-        </section>
-      </div>
-    </div>
-    <script type="module" src="/src/main.ts"></script>
+    <div class="reveal"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
