--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="/node_modules/reveal.js/dist/theme/black.css"
     />
-    <title>Vite App</title>
+    <title>Rokket Science - Typescript</title>
   </head>
   <body>
     <div class="reveal"></div>
